--- a/index.html
+++ b/index.html
@@ -31,6 +31,134 @@
         <!-- Movies will be added dynamically here -->
     </section>
 
+
+    <section class="movie-list-static">
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt9603212" target="_blank">
+            <img src="mission-impossible.jpg" alt="Mission Impossible Poster">
+        </a>
+        <div class="movie-info">
+            <h2>Mission: Impossible - Dead Reckoning - Part One</h2>
+            <p><strong>Year:</strong> 2022</p>
+            <p><strong>Rating:</strong> 7.8/10</p>
+            <p>Seventh entry in the long-running Mission: Impossible series.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt0421715/" target="_blank">
+            <img src="benjamin-button.jpg" alt="The Curious Case of Benjamin Button Poster">
+        </a>
+        <div class="movie-info">
+            <h2>The Curious Case of Benjamin Button</h2>
+            <p><strong>Year:</strong> 2009</p>
+            <p><strong>Rating:</strong> 7.8/10</p>
+            <p>A man ages in reverse, experiencing life’s joys and heartbreaks in a unique way.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt0181689/" target="_blank">
+            <img src="minority-report.jpg" alt="Minority Report Poster">
+        </a>
+        <div class="movie-info">
+            <h2>Minority Report</h2>
+            <p><strong>Year:</strong> 2002</p>
+            <p><strong>Rating:</strong> 7.6/10</p>
+            <p>A futuristic crime thriller where a law enforcement officer is predicted to commit murder and must prove his innocence.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt0362227/" target="_blank">
+            <img src="terminal.jpg" alt="The Terminal Poster">
+        </a>
+        <div class="movie-info">
+            <h2>The Terminal</h2>
+            <p><strong>Year:</strong> 2004</p>
+            <p><strong>Rating:</strong> 7.4/10</p>
+            <p>A man becomes stranded at an airport due to political turmoil in his home country.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt3774114/" target="_blank">
+            <img src="snowden.jpg" alt="Snowden Poster">
+        </a>
+        <div class="movie-info">
+            <h2>Snowden</h2>
+            <p><strong>Year:</strong> 2016</p>
+            <p><strong>Rating:</strong> 7.3/10</p>
+            <p>A dramatization of Edward Snowden’s decision to leak classified government surveillance information.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt0323944/" target="_blank">
+            <img src="shattered-glass.jpg" alt="Shattered Glass Poster">
+        </a>
+        <div class="movie-info">
+            <h2>Shattered Glass</h2>
+            <p><strong>Year:</strong> 2003</p>
+            <p><strong>Rating:</strong> 7.1/10</p>
+            <p>The true story of a journalist who fabricated articles until his deception was uncovered.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt0425123/" target="_blank">
+            <img src="just-like-heaven.jpg" alt="Just Like Heaven Poster">
+        </a>
+        <div class="movie-info">
+            <h2>Just Like Heaven</h2>
+            <p><strong>Year:</strong> 2005</p>
+            <p><strong>Rating:</strong> 6.7/10</p>
+            <p>A man moves into an apartment only to find the spirit of its former resident haunting him.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt11252248/" target="_blank">
+            <img src="dog.jpg" alt="Dog Poster">
+        </a>
+        <div class="movie-info">
+            <h2>Dog</h2>
+            <p><strong>Year:</strong> 2022</p>
+            <p><strong>Rating:</strong> 6.5/10</p>
+            <p>Two former Army Rangers embark on an unforgettable road trip with a military dog.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt0204946/" target="_blank">
+            <img src="bring-it-on.jpg" alt="Bring It On Poster">
+        </a>
+        <div class="movie-info">
+            <h2>Bring It On</h2>
+            <p><strong>Year:</strong> 2000</p>
+            <p><strong>Rating:</strong> 6.1/10</p>
+            <p>A cheerleading squad discovers its routines were stolen, leading to a showdown for national championship glory.</p>
+        </div>
+    </div>
+
+    <div class="movie">
+        <a href="https://www.imdb.com/title/tt0889573/" target="_blank">
+            <img src="switch.jpg" alt="The Switch Poster">
+        </a>
+        <div class="movie-info">
+            <h2>The Switch</h2>
+            <p><strong>Year:</strong> 2010</p>
+            <p><strong>Rating:</strong> 6.1/10</p>
+            <p>A woman pursues artificial insemination, unaware that her best friend drunkenly switched the donor’s sample.</p>
+        </div>
+    </div>
+</section>
+
+    <footer>
+        <p>&copy; 2025 Recently Watched Movies</p>
+        <p>Created by Jean Kathlyn Belarmino</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
